# swagger.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
   description: Mar4ik Dev Swagger
 servers:
-  - url: http://localhost:2003
+  - url: http://localhost:1111
 paths:
   /api/v1/items:
     get:
@@ -153,3 +153,49 @@ paths:
           description: Элемент удален
         404:
           description: Элемент не найден
+
+  /api/v1/register:
+    post:
+      summary: Регистрация пользователя
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+                - password
+              properties:
+                name:
+                  type: string
+                password:
+                  type: string
+      responses:
+        201:
+          description: Пользователь зарегистрирован
+        400:
+          description: Имя и пароль обязательны
+
+  /api/v1/login:
+    post:
+      summary: Вход пользователя
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+                - password
+              properties:
+                name:
+                  type: string
+                password:
+                  type: string
+      responses:
+        200:
+          description: Успешный вход в систему
+        400:
+          description: Неверное имя или пароль
